--- a/zigbee2mqtt-data/configuration.yaml
+++ b/zigbee2mqtt-data/configuration.yaml
@@ -86,3 +86,11 @@ devices:
     friendly_name: X003
   '0x84ba20fffe28b03b':
     friendly_name: T001
+  '0x9035eafffe747dfa':
+    friendly_name: T002
+  '0x003c84fffe21fa74':
+    friendly_name: T003
+  '0x9035eafffe7124d5':
+    friendly_name: T004
+  '0x003c84fffe21fdbd':
+    friendly_name: T005
