--- a/nodered-data/.config.users.json
+++ b/nodered-data/.config.users.json
@@ -9,7 +9,7 @@
                 "view-grid-size": "20",
                 "view-node-status": true,
                 "view-node-show-label": true,
-                "view-show-tips": true,
+                "view-show-tips": false,
                 "view-show-welcome-tours": true
             },
             "tours": {
@@ -17,6 +17,7 @@
             }
         },
         "menu-deploymenu-item-flow": true,
-        "menu-deploymenu-item-full": false
+        "menu-deploymenu-item-full": false,
+        "menu-menu-item-sidebar": false
     }
 }
