--- a/nodered-data/.config.users.json
+++ b/nodered-data/.config.users.json
@@ -18,6 +18,6 @@
         },
         "menu-deploymenu-item-flow": true,
         "menu-deploymenu-item-full": false,
-        "menu-menu-item-sidebar": false
+        "menu-menu-item-sidebar": true
     }
 }
